--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
     "env": {
+      "node": true,
       "browser": true,
       "es2021": true
     },
@@ -64,7 +65,7 @@
       "func-names": "off",
       "jsx-a11y/label-has-associated-control": "off",
       "@typescript-eslint/no-non-null-assertion": "off",
-  
+      
       "class-methods-use-this": "off",
       "react/no-unused-prop-types": "off",
       "prefer-arrow-callback": "off",
