--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,6 @@
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5",
-    "endOfLine": "auto",
+    "endOfLine": "lf",
     "printWidth": 100
   }
